# GymStars

./: .gitignore  bot.py  main.py  pyproject.toml
config/: base_conf.py  env_config.py  main_conf.py
crud/: exercise.py  rep.py  user.py  workout.py
database/: connection.py  default_exercises.py  init_db.py  session.py
handlers/: exercises.py  start.py  workouts.py
keyboards/: exercise.py  main_menu.py  workout.py
models/: __init__.py  annotated.py  base.py  exercise.py  exercise_type.py  rep.py  user.py  workout.py  workout_exercise.py
schemas/: exercise.py  rep.py  workout.py
states/: exercise_states.py  workout_states.py
